--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Pagina do meu site</h1>
+    <h2>Pagina para testes git</h2>
     <a href="pagina de vendas.html">Ir para a pagina de vendas</a>
 </body>
 </html>
